--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- font-family: 'Josefin Sans', sans-serif;-->
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet"> 
 	<!-- font-family: 'Open Sans', sans-serif;-->
-	<title> LAB PROWEB </title>
+	<title> INDEX LAB PROWEB </title>
 </head> 
 <body>
 	<div id="portada">
