--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div id="practicas">
 		<h1 id="titulo"><a name="pra">PRACTICAS</a></h1>
-		<a href="#" id="enlacesl">• Práctica #1: Introducción</a></br></br></br>
+		<a href="p1.html" id="enlacesl">• Práctica #1: Introducción</a></br></br></br>
 		<a href="#" id="enlacesnl">• Práctica #2: Definición de HTML5</a></br></br></br>
 		<a href="#" id="enlacesnl">• Práctica #3: Introducción a la presentación en pantalla con CSS</a></br></br></br>
 		<a href="#" id="enlacesnl">• Práctica #4: Conceptos básicos de HTML, XHTML y CSS</a></br></br></br>
