--- a/p3.html
+++ b/p3.html
@@ -58,27 +58,67 @@
             color: #c19898;
         }
 
+        h4{
+            text-align: justify;
+            color: #2b2b28;
+            font-family: 'Spartan', sans-serif;
+            font-size: 14px;
+        }
+
     </style>
 </head>
 <body>
-    <h1>LECCION 3</h1>
+    <h1 id="0">LECCION 3</h1>
     <h2>Introducción a la presentación en pantalla con CSS</h2>
     <div id="principal">
         <h3><a href="#1" id="aindice">El papel del archivo de reset CSS</a></h3>
-        <h3><a href="#1" id="aindice">Breve historia de las técnicas de presentación en pantalla para la Web</a></h3>
-        <h3><a href="#1" id="aindice">Introducción a las distintas opciones de presentación de páginas</a></h3>
-        <h3><a href="#1" id="aindice">El elemento &lt;div&gt;: creación de una estructura CSS de dos columnas con anchura fija</a></h3>
-        <h3><a href="#1" id="aindice">La propiedad float CSS</a></h3>
-        <h3><a href="#1" id="aindice">Creación de columnas con la propiedad float</a></h3>
-        <h3><a href="#1" id="aindice">La propiedad clear</a></h3>
-        <h3><a href="#1" id="aindice">Creación de un menú de navegación basado en listas con “float”</a></h3>
-        <h3><a href="#1" id="aindice">Añadir estilos para el texto</a></h3>
-        <h3><a href="#1" id="aindice">Efecto de los márgenes internos y externos en una estructura de anchura fija</a></h3>
-        <h3><a href="#1" id="aindice">Repaso al uso de márgenes internos y externos</a></h3>
-        <h3><a href="#1" id="aindice">Aplicar una imagen de fondo al pie de página</a></h3>
-        <h3><a href="#1" id="aindice">Ajuste fino de la estructura visual de la página</a></h3>
-        <h3><a href="#1" id="aindice">Preguntas</a></h3>
-        <h3><a href="#1" id="aindice">Conclusiones</a></h3>
+        <h3><a href="#2" id="aindice">Breve historia de las técnicas de presentación en pantalla para la Web</a></h3>
+        <h3><a href="#3" id="aindice">Introducción a las distintas opciones de presentación de páginas</a></h3>
+        <h3><a href="#4" id="aindice">El elemento &lt;div&gt;: creación de una estructura CSS de dos columnas con anchura fija</a></h3>
+        <h3><a href="#5" id="aindice">La propiedad float CSS</a></h3>
+        <h3><a href="#6" id="aindice">Creación de columnas con la propiedad float</a></h3>
+        <h3><a href="#7" id="aindice">La propiedad clear</a></h3>
+        <h3><a href="#8" id="aindice">Creación de un menú de navegación basado en listas con “float”</a></h3>
+        <h3><a href="#9" id="aindice">Añadir estilos para el texto</a></h3>
+        <h3><a href="#10" id="aindice">Efecto de los márgenes internos y externos en una estructura de anchura fija</a></h3>
+        <h3><a href="#11" id="aindice">Repaso al uso de márgenes internos y externos</a></h3>
+        <h3><a href="#12" id="aindice">Aplicar una imagen de fondo al pie de página</a></h3>
+        <h3><a href="#13" id="aindice">Ajuste fino de la estructura visual de la página</a></h3>
+        <h3><a href="#14" id="aindice">Preguntas</a></h3>
+        <h3><a href="#15" id="aindice">Conclusiones</a></h3>
+
+        <h1 style="margin-top: 500px;" id="1">El papel del archivo de reset CSS</h1>
+        <h4>Una técnica para homogeneizar las presentaciones en pantalla consiste en utilizar un archivo CSS de reset que elimine los estilos por defecto aplicados a los elementos HTML utilizados con más frecuencia. Con este reseteo de valores podemos conseguir una base fiable y coherente sobre la cual construir nuestros nuevos estilos. Eric Meyer fue el primer desarrollador que preparó hojas de estilo de reset, que después distribuyó para uso público. Muchos diseñadores se preparan sus propias hojas de estilos de reset para resolver sus propias necesidades.
+            </br></br> EL uso de hojas de reset CSS puede tener algunas desventajas, sobre todo para los neófitos: tendrán que recordar constantemente que están utilizando dicha hoja de estilos y deben tener en cuenta cómo afectará a los distintos elementos del sitio web. Si estamos aplicando la hoja de reset a todo el sitio, algunos de sus efectos pueden resultar sorprendentes, sobre todo con elementos con los que no estamos especialmente familiarizados.
+        </h4>
+        <h3><a href="#0" id="aindice">Inicio</a></h3>
+
+
+
+        <h1 id="2">Breve historia de las técnicas de presentación en pantalla para la Web</h1>
+        <h4> El módulo Técnicas para la elaboración de presentaciones: PowerPoint y Office Mix correspondiente al Itinerario formativo en Elaboración de contenidos didácticos del programa de formación de URJC online, tiene como principal objetivo que adquieras las competencias necesarias para hacer de tus materiales una fórmula mucho más atractiva para tus estudiantes. </br></br>
+            Para producir estos materiales didácticos, trabajaremos en la elaboración de distintos tipos de presentaciones que fomenten el aprendizaje de tus estudiantes, captando su atención y fomentando la comprensión y el recuerdo. </br></br>
+            Estas presentaciones se guardarán en un formato adecuado para que puedas ponerlas a disposición de tus estudiantes, a través de tus asignaturas de Aula Virtual. </br></br>
+            A parte de la importancia del lenguaje en las presentaciones, Melissa Marshall pone en valor otros aspectos importantes para hacer presentaciones más accesibles y atractivas a tus estudiantes, que ya hemos nombrado anteriormente, como utilizar ejemplos, historias y analogías para enganchar y captar la atención, transmitiendo sin comprometer a la información. Uno de sus consejos es no presentar la información como una lista sin numerar o, como dice ella, utilizando “balas” que maten tu presentación. Las balas presentan demasiada información que satura al estudiante, se utiliza un lenguaje que no es accesible y además no es atractiva. En cambio si se presenta la información de manera visual y apoyada con una frase o una anécdota, se captará la atención, motivará al estudiante y hará que el concepto se procese mejor favoreciendo el entendimiento del concepto. </br></br>
+        </h4>
+        <h3><a href="#0" id="aindice">Inicio</a></h3>
+
+
+
+        <h1 id="3">Introducción a las distintas opciones de presentación de páginas</h1>
+        <h4>En los últimos años el comportamiento de los consumidores en México y en el mundo  ha cambiado, en el momento en que se requiere adquirir un producto o algún servicio la primer opción es buscar en Internet, comparar precios, comparar relación costo beneficio e inclusive buscar reseñas de otros compradores para posteriormente realizar la compra, ya sea en tienda física o en algún sitio web. </br></br>
+            Es por estas nuevas tendencias de consumo que cualquier empresa sin importar el giro debe de tener una página o un sitio web en el cual presente sus productos o servicios, dicha información estará disponible cuando algún  cliente potencial este buscando información, precios o características relacionadas al giro de tu empresa, dandote la posibilidad  de convertir a dicho visitante en un cliente y a su vez te da la oportunidad de ser más competitivo. </br></br>
+        </h4>
+        <h3><a href="#0" id="aindice">Inicio</a></h3>
+
+
+
+        <h1 id="4">El elemento &lt;div&gt;: creación de una estructura CSS de dos columnas con anchura fija</h1>
+        <h4>El elemento div es un contenedor genérico sin un significado semántico en particular. Se utiliza comúnmente en el desarrollo de documentos con propósitos estilísticos, en conjunto con los atributos style y class. También puede resultar útil para proveer atributos comunes a los elementos contenidos por el, como por ejemplo lang o title. </br></br>
+            Los autores deberían considerar a div como último recurso, reservado únicamente para aquellos casos en los que elementos con mayor significado, como main, header, footer, nav o article no son aplicables. </br></br>
+        </h4>
+        <h3><a href="#0" id="aindice">Inicio</a></h3>
+
 
     </div>
 
