--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<a href="#" id="enlacesnl">• Producto Integrador de Aprendizaje</a></br></br></br></br></br></br></br></br></br></br>
 
 		<a href="#inte" id="bint">INTEGRANTES</a>
-		<a href="#port" id="bindex">INDEX</a>
+		<a href="#port" id="bindex">INICIO</a>
 	</div>
 
 	<div id="integrantes">
@@ -71,7 +71,7 @@
 		</div>
 
 		<a href="#pra" id="bint">PRACTICAS</a>
-		<a href="#port" id="bindex">INDEX</a>
+		<a href="#port" id="bindex">INICIO</a>
 	</div>
 
 </body>
