--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head> 
 <body>
 	<div id="portada">
-		<h1 id="j18" style="margin-top: 60px;"><a name="port">AUTONOMA DE NUEVO LEON | FACULTAD DE INGENIERIA MECANICA Y ELECTRICA</a></h1>
+		<h1 id="j18" style="margin-top: 60px;"><a name="port">UNIVERSIDAD AUTONOMA DE NUEVO LEON | FACULTAD DE INGENIERIA MECANICA Y ELECTRICA</a></h1>
 		<h2 id="j28" style="margin-top: 130px;">LABORATORIO DE</h2>
 		<h3 id="opens">PROGRAMACION</br>WEB</h3>
 		<h4 id="j28">M.C. Carlos Adrián Pérez Cortez</h4>
